force-app/main/default/objects/Submission__c/fields/Common_JSON_Status__c.field-meta.xml
<CustomField>
    <fullName>Common_JSON_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common JSON Status</label>
    <type>Checkbox</type>
</CustomField>