force-app/main/default/objects/Submission__c/fields/Custom_JSON_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_JSON_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom JSON Status</label>
    <type>Checkbox</type>
</CustomField>