force-app/main/default/objects/Submission__c/fields/processed_commonjson__c.field-meta.xml
<CustomField>
    <fullName>processed_commonjson__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to indicate that batch has processed the submission common json</description>
    <label>processed common json</label>
    <type>Checkbox</type>
</CustomField>