force-app/main/default/objects/Submission__c/fields/Submission_360_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_360_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission 360 Status</label>
    <type>Checkbox</type>
</CustomField>