force-app/main/default/objects/Submission__c/fields/Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Submission_Id__c</fullName>
    <externalId>true</externalId>
    <label>Submission Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>