force-app/main/default/objects/Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Message_Id__c</columns>
    <columns>Submission_Id__c</columns>
    <columns>Submission_360_Status__c</columns>
    <columns>Common_JSON_Status__c</columns>
    <columns>Custom_JSON_Status__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>